--- a/src/main/resources/static/lotteryList.html
+++ b/src/main/resources/static/lotteryList.html
@@ -2,23 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Create new lottery</title>
+    <title>Lotteries</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 </head>
 <body>
-<input id="title"  class="form-control" type="text" placeholder="Title">
+<a href="adminPage.html">Back</a>
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Title</th>
+        <th scope="col">Participants Limit</th>
+        <th scope="col">Status</th>
+        <th scope="col">Start Date</th>
+        <th scope="col">End Date</th>
+        <th scope="col">Winner Code</th>
+        <th scope="col">Assigned Participants</th>
 
-<br>
 
-<input id="participantsLimit" class="form-control" type="number" placeholder="Participants Limit">
+        <th scope="col"></th>
+    </tr>
+    </thead>
+    <tbody id="table-body">
 
-<br>
-
-<button class="btn btn-primary" onclick="createLottery()">Create and open registration</button>
+    </tbody>
+</table>
 
 <script src="lotteryService.js" type="text/javascript"></script>
+<script>
+    loadLotteries();
+</script>
 </body>
 </html>
