--- a/src/main/resources/static/registeringParticipant.html
+++ b/src/main/resources/static/registeringParticipant.html
@@ -2,28 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Available Lotteries</title>
+    <title>Registering Participant</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 </head>
-<table class="table">
-    <thead>
-    <tr>
-        <th scope="col">Lottery Id</th>
-        <th scope="col">Title</th>
-        <th scope="col">Places left for registration</th>
-        <th scope="col"></th>
-    </tr>
-    </thead>
-    <tbody id="table-body">
+<body>
+<p>Enter data:
+<input id="email" class="form-control" type="text" placeholder="email">
+<br>
+<input id="age" class="form-control" type="number" placeholder="age">
+<br>
+<p>Do i need code here? or it will be sent at email............
+<br>
 
-    </tbody>
-</table>
-<script src="clientLotteryService.js" type="text/javascript"></script>
-<script>
-    loadLotteries();
-</script>
+<button class="btn btn-primary" onclick="registerToLottery()">register</button>
 
+ <script src="clientLotteryService.js" type="text/javascript"></script>
+</body>
 </html>
