UI part with register

--- a/src/main/resources/static/registeringParticipant.html
+++ b/src/main/resources/static/registeringParticipant.html
@@ -14,10 +14,10 @@
 <br>
 <input id="age" class="form-control" type="number" placeholder="age">
 <br>
-<p>Do i need code here? or it will be sent at email............
+<input id="code" class="form-control" type="number" placeholder="code">
 <br>
 
-<button class="btn btn-primary" onclick="registerToLottery()">register</button>
+<button class="btn btn-primary" onclick="addParticipantToLottery()">register</button>
 
  <script src="clientLotteryService.js" type="text/javascript"></script>
 </body>
