--- a/src/main/resources/static/status.html
+++ b/src/main/resources/static/status.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Available Lotteries</title>
+    <title>Participants Status</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
@@ -15,22 +15,17 @@
             integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
             crossorigin="anonymous"></script>
 </head>
+<body>
+<input id="email" class="form-control" type="email" placeholder="email">
+
 <br>
-<table class="table">
-    <thead>
-    <tr>
-        <th scope="col">Lottery Id</th>
-        <th scope="col">Title</th>
-        <th scope="col"></th>
-    </tr>
-    </thead>
-    <tbody id="table-body">
 
-    </tbody>
-</table>
+<input id="code" class="form-control" type="number" placeholder="code">
+
+<br>
+
+<button class="btn btn-primary" onclick="checkParticipantsStatus()">Check Status</button>
+
 <script src="clientLotteryService.js" type="text/javascript"></script>
-<script>
-    loadLotteries();
-</script>
-
+</body>
 </html>
